<resources>
    <string name="app_name">CityWeather</string>
    <string name="designed_by">DESIGNED BY</string>
    <string name="hawkscode">HawksCode</string>
    <string name="wind_speed">Wind Speed</string>
    <string name="condition">Condition</string>
    <string name="humidity">Humidity</string>
    <string name="sunrise">Sunrise</string>
    <string name="todo">TODO</string>
    <string name="sea">Sea</string>
    <string name="sunset">Sunset</string>
</resources>