<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/sunny_background"
    tools:context=".activities.MainActivity">


    <SearchView
        android:id="@+id/search_view"
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="24dp"
        android:background="@drawable/search_view_bg"
        android:iconifiedByDefault="false"
        android:queryHint="Search for a city..."
        android:searchIcon="@drawable/search"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_city"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:drawablePadding="15dp"
        android:textSize="20sp"
        android:textColor="@color/black"
        app:drawableLeftCompat="@drawable/loctaion"
        app:layout_constraintEnd_toEndOf="@id/search_view"
        app:layout_constraintStart_toStartOf="@id/search_view"
        app:layout_constraintTop_toBottomOf="@id/search_view" />

    <TextView
        android:id="@+id/tv_day"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="38dp"
        android:drawablePadding="15dp"
        android:textColor="@color/black"
        android:textSize="34sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/lottie_animation"
        app:layout_constraintTop_toBottomOf="@id/tv_city"
        android:text="Today" />

    <TextView
        android:id="@+id/tv_temperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textColor="@color/black"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/tv_day"
        app:layout_constraintStart_toStartOf="@id/tv_day"
        app:layout_constraintTop_toBottomOf="@id/tv_day"
        tools:text="00°C" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottie_animation"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="38dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_city"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/sun" />

    <TextView
        android:id="@+id/tv_min_temp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@id/tv_temperature"
        app:layout_constraintStart_toStartOf="@id/tv_temperature"
        app:layout_constraintTop_toBottomOf="@+id/tv_temperature"
        tools:text="Min:23:22°C" />

    <TextView
        android:id="@+id/tv_max_temp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@id/tv_temperature"
        app:layout_constraintStart_toStartOf="@id/tv_temperature"
        app:layout_constraintTop_toBottomOf="@+id/tv_min_temp"
        tools:text="Min:23:22°C" />

    <TextView
        android:id="@+id/weather"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="58dp"
        android:layout_marginTop="12dp"
        android:textColor="@color/black"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lottie_animation"
        tools:text="SUNNY" />

    <TextView
        android:id="@+id/tv_dayName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="58dp"
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/weather"
        tools:text="Friday" />

    <TextView
        android:id="@+id/tv_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="41dp"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
        app:layout_constraintEnd_toEndOf="@id/tv_dayName"
        app:layout_constraintStart_toStartOf="@id/tv_dayName"
        app:layout_constraintTop_toBottomOf="@+id/tv_dayName"
        tools:text="1 March 2024" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="41dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="100dp"
        android:background="@drawable/background_shape"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_date">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/humidity_card"
            android:layout_width="84dp"
            android:layout_height="94dp"
            android:layout_margin="16dp"
            android:layout_marginEnd="43dp"
            android:background="@drawable/card_bg"
            app:layout_constraintEnd_toStartOf="@+id/windSpeed_card"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/iv_humidity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/todo"
                android:src="@drawable/humidity"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_humidity_level"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iv_humidity"
                tools:text="21°C" />

            <TextView
                android:id="@+id/tv_humidity_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/humidity"
                android:textColor="@color/black"
                android:textSize="11sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_humidity_level" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/windSpeed_card"
            android:layout_width="84dp"
            android:layout_height="94dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/card_bg"
            app:layout_constraintEnd_toStartOf="@+id/conditions_card"
            app:layout_constraintStart_toEndOf="@id/humidity_card"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/iv_wind"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:contentDescription="@string/todo"
                android:src="@drawable/wind"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_wind_level"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iv_wind"
                tools:text="21°C" />

            <TextView
                android:id="@+id/tv_wind"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/wind_speed"
                android:textColor="@color/black"
                android:textSize="11sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_wind_level" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/conditions_card"
            android:layout_width="84dp"
            android:layout_height="94dp"
            android:layout_margin="16dp"
            android:background="@drawable/card_bg"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/windSpeed_card"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/iv_condition"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/todo"
                android:src="@drawable/conditions"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_condition_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iv_condition"
                tools:text="21°C" />

            <TextView
                android:id="@+id/tv_condition_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/condition"
                android:textColor="@color/black"
                android:textSize="11sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_condition_type" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/sea_card"
            android:layout_width="84dp"
            android:layout_height="94dp"
            android:layout_margin="16dp"
            android:background="@drawable/card_bg"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/conditions_card"
            app:layout_constraintStart_toStartOf="@id/conditions_card"
            app:layout_constraintTop_toBottomOf="@id/conditions_card">

            <ImageView
                android:id="@+id/iv_sea"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:contentDescription="@string/todo"
                android:src="@drawable/sea"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_sea_level"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iv_sea"
                tools:text="100" />

            <TextView
                android:id="@+id/tv_sea_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/sea"
                android:textColor="@color/black"
                android:textSize="11sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_sea_level" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/sunrise_card"
            android:layout_width="84dp"
            android:layout_height="94dp"
            android:layout_margin="16dp"
            android:background="@drawable/card_bg"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/humidity_card"
            app:layout_constraintStart_toStartOf="@id/humidity_card"
            app:layout_constraintTop_toBottomOf="@id/humidity_card">

            <ImageView
                android:id="@+id/iv_sunrise"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/todo"
                android:src="@drawable/sunrise"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_sunrise_level"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iv_sunrise"
                tools:text="10054" />

            <TextView
                android:id="@+id/tv_sunrise_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/sunrise"
                android:textColor="@color/black"
                android:textSize="11sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_sunrise_level" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/sunset_card"
            android:layout_width="84dp"
            android:layout_height="94dp"
            android:layout_margin="16dp"
            android:background="@drawable/card_bg"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/windSpeed_card"
            app:layout_constraintStart_toStartOf="@id/windSpeed_card"
            app:layout_constraintTop_toBottomOf="@id/windSpeed_card">

            <ImageView
                android:id="@+id/iv_sunset"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/todo"
                android:src="@drawable/sunset"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tv_sunset_level"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:textColor="@color/black"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/iv_sunset"
                tools:text="10540" />

            <TextView
                android:id="@+id/tv_sunset_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/sunset"
                android:textColor="@color/black"
                android:textSize="11sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_sunset_level" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>

